fix overflow mobile device

--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -26,3 +26,11 @@ body {
   cursor: none;
   overflow-x: hidden;
 }
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+} 
